2015-09-16  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/p16f1xxx.inc:
    Changed to the gpasm specific version.

  * header/p18cxxx.inc:
    Added an gpasm specific example and the __18CXX section.

2015-09-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/*, lkr/*, man/gpasm.1.in:
    Updated based on the mplabx-3.10, part 2.

2015-09-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, configure, configure.ac, header/*,
    gpasm/gpasm.c, gpasm/list.c, gpasm/processor.c,
    gpasm/testsuite/gpasm.mchip/asmfiles/hd871.asm,
    gpasm/testsuite/gpasm.mchip/asmfiles/hd872.asm,
    gpasm/testsuite/gpasm.mchip/asmfiles/hd873.asm,
    gputils/gpdasm.c, libgputils/gpcfg-table.c,
    libgputils/gpcfg.c, libgputils/gpcfg.h, libgputils/gpdis.c,
    libgputils/gpprocessor.c, libgputils/gpprocessor.h,
    libgputils/gpreg-table.c, lkr/*:
    Updated based on the mplabx-3.10.

2015-08-20  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/ppparse.y:
    Fixed the bug: "#284 Cannot suppress "Symbol xxx not assigned a value" message"
    Thanks to Kurt Deitrick.

2015-08-19  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/gpasm:
    Fixed the bug: "#283 Option documentation"
    Thanks to Kurt Deitrick.

  * aclocal.m4, configure.ac, config.h.in, configure,
    Makefile.in, */Makefile.in, libgputils/gpsystem.c:
    In the gp_absolute_path() function use the realpath() library
    function (if available).

2015-08-12  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx:
    Fixed the bug: "#282 Description of __CODE_START and __CODE_END"
    Thanks to Kurt Deitrick.

2015-08-03  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * configure, configure.ac:
    Updated based on the mplabx-3.05.

2015-08-02  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/p16f870.inc, header/p16f871.inc, header/p16f872.inc: